--- a/EventsReminder/Info.plist
+++ b/EventsReminder/Info.plist
@@ -6,6 +6,10 @@
 	<array>
 		<string>Intent</string>
 	</array>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>ConfigurationIntent</string>
+	</array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
